force-app/main/default/objects/CRMfusionDBR101__AutoConvert_Mapping__c/fields/CRMfusionDBR101__Lead_Field__c.field-meta.xml
<CustomField>
    <fullName>CRMfusionDBR101__Lead_Field__c</fullName>
    <inlineHelpText>Select Lead field you&#39;d like to map for conversion.</inlineHelpText>
    <label>Lead Field Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>