force-app/main/default/objects/CRMfusionDBR101__AutoConvert_Mapping__c/fields/CRMfusionDBR101__Target_Object__c.field-meta.xml
<CustomField>
    <fullName>CRMfusionDBR101__Target_Object__c</fullName>
    <inlineHelpText>The object the Lead field&#39;s values will be mapped to during an automatic conversion.</inlineHelpText>
    <label>Target Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>